--- a/app/views/shipments/_index_table.html.haml
+++ b/app/views/shipments/_index_table.html.haml
@@ -33,6 +33,7 @@
       - @shipments.each do |shipment|
         %tr.data 
           %td= shipment.tracking_id
+          %td= shipment.status
           %td= shipment.ship_from
           %td= shipment.ship_to
           %td= shipment.deadline
@@ -43,5 +44,5 @@
              
           %td= link_to 'Show', shipment
           %td= link_to 'Update', edit_shipment_path(shipment)
-          %td= link_to 'Close', shipment, method: :delete, data: { confirm: "Are you sure you want to close out shipment #{shipment.tracking_id}?" } 
+          
   %br
