--- a/app/views/shipments/search.html.haml
+++ b/app/views/shipments/search.html.haml
@@ -51,6 +51,7 @@
           - @shipments.each do |shipment|
             %tr.data 
               %td= shipment.tracking_id
+              %td= shipment.status
               %td= shipment.ship_from
               %td= shipment.ship_to
               %td= shipment.deadline
@@ -61,7 +62,6 @@
               
               %td= link_to 'Show', shipment
               %td= link_to 'Update', edit_shipment_path(shipment)
-              %td= link_to 'Close', shipment, method: :close, data: { confirm: "Are you sure you want shipment #{shipment.tracking_id}? closed?" } 
       %br
 
   .nbsp
