Bootstrap work to clean up alignment in layout, header and footer.  Better, not perfect.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,11 +12,13 @@
 -#
 -# Bootstrap grid for all containers
 -#  
-.container-fluid
 
+.container
+  
   - unless self.controller_name == 'welcome'
     = render '/shared/header'
- 
+  
   = yield
 
+  
   = render '/shared/footer'
