--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,44 +1,43 @@
 
 
-%br
-.row
-  .col-sm-2
-    .col-sm-1
-      
-  .col-sm-auto
-       
+.container
+
+  %p
+
+  .row-align-items-start
     %footer
       = render "shared/finders_buttons"
-%br
-.row
-  .col
-  .col-sm-auto
+    %p
+
+  .row-align-items-center
+    
     
     %footer
+      
       = link_to 'Home', root_path
-      &nbsp;
-      = link_to 'About Us', about_path
-      &nbsp;
-      = link_to 'Advertise', advertise_path
-      &nbsp;
-      = link_to 'FAQ', faq_path  
-      &nbsp;
-      = link_to 'Contact Us', contact_path
-      &nbsp;
-      = link_to 'Privacy Policy', privacy_path
-      &nbsp;
-      = link_to 'Terms and Conditions', tsandcs_path
-      &nbsp;
-      = link_to 'License', license_path
-  .col
-
-%hr
-.row
-  .col
-.row
-  .col
-  
-  .col-md-auto
     
-    %footer Roll365.com does not employ, recommend or endorse any agent, broker, carrier or shipper nor are we responsible for the conduct of any agent, broker, carrier or shipper. Roll365.com provides information and tools to help agents, brokers, carriers and shippers make informed decisions.   Where appropriate such services are built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.  As of now no smart contact services are implemented.
-  .col
+      = link_to 'About Us', about_path
+      
+      = link_to 'Advertise', advertise_path
+      
+      = link_to 'FAQ', faq_path  
+      
+      = link_to 'Contact Us', contact_path
+      
+      = link_to 'Privacy Policy', privacy_path
+      
+      = link_to 'Terms and Conditions', tsandcs_path
+      
+      = link_to 'License', license_path
+  
+    %p
+
+  .row-align-items-end
+    
+    .col
+      %footer  
+
+    
+        Roll365.com does not employ, recommend or endorse any agent, broker, carrier or shipper nor are we responsible for the conduct of any agent, broker, carrier or shipper. Roll365.com provides information and tools to help agents, brokers, carriers and shippers make informed decisions.   Where appropriate such services are built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.  As of now no smart contact services are implemented.
+
+      
