--- a/app/views/shipments/_search_panel.html.haml
+++ b/app/views/shipments/_search_panel.html.haml
@@ -23,6 +23,9 @@
     = f.label :utilization
     = f.text_field :utilization
 
+    = f.label :status
+    = f.text_field :status
+
     = f.submit class: 'btn btn-primary'
     .btn
       = link_to "Clear", request_path, class: "btn btn-secondary"
