Removed #destroy and did not replace with #delete in address#index.  Need to find a better route to removing extraneous address members.

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,14 +1,14 @@
+      
+%center
+  #{controller_name}##{action_name}
 
-.row
-  .col
-    %h6
-      #{controller_name}##{action_name}
+.container
 
-.row
+  .row
   
-  .col-sm-8
+    .col-sm-8
     
-    - flash.each do |name, msg|
-      .row.tbg
-        = content_tag :div, msg, class: name
-  %hr
+      - flash.each do |name, msg|
+        .row.tbg
+          = content_tag :div, msg, class: name
+    %hr
