--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,5 +1,5 @@
 
-
+%center
 .container
 
   %p
@@ -13,22 +13,21 @@
     
     
     %footer
-      
-      = link_to 'Home', root_path
+      = link_to_unless_current 'Home', root_path
     
-      = link_to 'About Us', about_path
+      = link_to_unless_current 'About Us', about_path
       
-      = link_to 'Advertise', advertise_path
+      = link_to_unless_current 'Advertise', advertise_path
       
-      = link_to 'FAQ', faq_path  
+      = link_to_unless_current 'FAQ', faq_path  
       
-      = link_to 'Contact Us', contact_path
+      = link_to_unless_current 'Contact Us', contact_path
       
-      = link_to 'Privacy Policy', privacy_path
+      = link_to_unless_current 'Privacy Policy', privacy_path
       
-      = link_to 'Terms and Conditions', tsandcs_path
+      = link_to_unless_current 'Terms and Conditions', tsandcs_path
       
-      = link_to 'License', license_path
+      = link_to_unless_current 'License', license_path
   
     %p
 
