HYPERTEXT top level components [Dashboard, Shipment] working, layouts OK.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
 
   - if controller_name == 'hyperstack'
     
-    = mount_component 'header_hs'
+    = mount_component 'Header'
 
   - else
 
@@ -35,6 +35,7 @@
   - else
 
     = render '/shared/footer'
+    
 
 
 -# HS layout suggestion from Catmandu
