Dashboard problem was due to a get defined in routes.rb to a welcome#dashboard even though no such template exists. OK now.  Modified footer in CSS to .footer and now that works in footers.  Step by step...

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,9 +29,7 @@ body {
   tr:hover, h1:hover, a:hover {
     background-color: lightyellow;
   }
-footer{
-  font-size: 12px;
-  }
+
 
 h3{ font-size: 24px
   }
@@ -39,6 +37,9 @@ h3{ font-size: 24px
 .data,p {
     color: "#6c757d";
     font-size: 14px;
+  }
+.footer{
+  font-size: 12px;
   }
 .tbg {
   background-color: lightblue
