--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -20,6 +20,11 @@
   = link_to shipments_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
       Continue to Shipments
+  
+  = link_to shipment_path, class: 'btn btn-secondary' do
+    %i.glyphicon.glyphicon-plus
+      Continue to Shipments HS
+
 %br
 
 
