Removed shipment from HYPERSTACK/models, put it back in app/models.  Header, body, Footer work again.  Tring out the Interssting books snippet, doesn't render yet.

--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -23,7 +23,7 @@
   
   = link_to shipment_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
-      Continue to Shipments HS
+      Continue to Shipment HS
 
 %br
 
