HYPERSTACK.  Put Dashboard button on landing page.  Takes you to hyperstack/dashboard.rb.  Put shipment_index code in there. Better flow.

--- a/app/views/shipments/index.html.haml
+++ b/app/views/shipments/index.html.haml
@@ -29,6 +29,12 @@
         %i.glyphicon.glyphicon-plus
           New Shipment
 
+  .col-sm-2
+    .col
+      = link_to dashboard_path, class: 'btn btn-secondary' do
+        %i.glyphicon.glyphicon-plus
+          Dashboard
+
 .row
   .col-sm-2
     .col
