--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -17,9 +17,9 @@
 %br
 %center
 
-  = link_to shipments_path, class: 'btn btn-secondary' do
+  = link_to dashboard_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
-      Continue to Shipments
+      Dashboard
 
 %br
 
