--- a/app/views/layouts/_hyperstack.html.haml
+++ b/app/views/layouts/_hyperstack.html.haml
@@ -1,5 +1,5 @@
-    -#= mount_component 'Header', controller_name: controller_name, action_name: action_name, flash: flash.as_json
+    = mount_component 'Header', controller_name: controller_name, action_name: action_name, flash: flash.as_json
 
-    = mount_component 'Header', controller_name: 'controller_name', action_name: 'action_name', flash: 'flash.as_json'
+    -#= mount_component 'Header', controller_name: 'controller_name', action_name: 'action_name', flash: 'flash.as_json'
 
     = yield
