--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ body {
     display: none;
 }
 
-.todo-app {
+.roll365-app {
     background: #fff;
     margin: 130px 0 40px 0;
     position: relative;
@@ -48,25 +48,25 @@ body {
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
-.todo-app input::-webkit-input-placeholder {
+.roll365-app input::-webkit-input-placeholder {
     font-style: italic;
     font-weight: 300;
     color: #e6e6e6;
 }
 
-.todo-app input::-moz-placeholder {
+.roll365-app input::-moz-placeholder {
     font-style: italic;
     font-weight: 300;
     color: #e6e6e6;
 }
 
-.todo-app input::input-placeholder {
+.roll365-app input::input-placeholder {
     font-style: italic;
     font-weight: 300;
     color: #e6e6e6;
 }
 
-.todo-app h1 {
+.roll365-app h1 {
     position: absolute;
     top: -155px;
     width: 100%;
@@ -79,7 +79,7 @@ body {
     text-rendering: optimizeLegibility;
 }
 
-.new-todo,
+.new-roll365,
 .edit {
     position: relative;
     margin: 0;
@@ -98,7 +98,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.new-todo {
+.new-roll365 {
     padding: 16px 16px 16px 60px;
     border: none;
     background: rgba(0, 0, 0, 0.003);
@@ -140,39 +140,39 @@ body {
     color: #737373;
 }
 
-.todo-list {
+.roll365-list {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.todo-list li {
+.roll365-list li {
     position: relative;
     font-size: 24px;
     border-bottom: 1px solid #ededed;
 }
 
-.todo-list li:last-child {
+.roll365-list li:last-child {
     border-bottom: none;
 }
 
-.todo-list li.editing {
+.roll365-list li.editing {
     border-bottom: none;
     padding: 0;
 }
 
-.todo-list li.editing .edit {
+.roll365-list li.editing .edit {
     display: block;
     width: 506px;
     padding: 12px 16px;
     margin: 0 0 0 43px;
 }
 
-.todo-list li.editing .view {
+.roll365-list li.editing .view {
     display: none;
 }
 
-.todo-list li .toggle {
+.roll365-list li .toggle {
     text-align: center;
     width: 40px;
     /* auto, since non-WebKit browsers doesn't support input styling */
@@ -186,11 +186,11 @@ body {
     appearance: none;
 }
 
-.todo-list li .toggle {
+.roll365-list li .toggle {
     opacity: 0;
 }
 
-.todo-list li .toggle + label {
+.roll365-list li .toggle + label {
     /*
         Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
         IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
@@ -200,11 +200,11 @@ body {
     background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+.roll365-list li .toggle:checked + label {
     background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
-.todo-list li label {
+.roll365-list li label {
     word-break: break-all;
     padding: 15px 15px 15px 60px;
     display: block;
@@ -212,12 +212,12 @@ body {
     transition: color 0.4s;
 }
 
-.todo-list li.completed label {
+.roll365-list li.completed label {
     color: #d9d9d9;
     text-decoration: line-through;
 }
 
-.todo-list li .destroy {
+.roll365-list li .destroy {
     display: none;
     position: absolute;
     top: 0;
@@ -232,30 +232,30 @@ body {
     transition: color 0.2s ease-out;
 }
 
-.todo-list li .destroy:hover {
+.roll365-list li .destroy:hover {
     color: #af5b5e;
 }
 
-.todo-list li .destroy:after {
+.roll365-list li .destroy:after {
     content: '×';
 }
 
-.todo-list li:hover .destroy {
+.roll365-list li:hover .destroy {
     display: block;
 }
 
-.todo-list li .edit {
+.roll365-list li .edit {
     display: none;
 }
 
-.todo-list li.editing:last-child {
+.roll365-list li.editing:last-child {
     margin-bottom: -1px;
 }
 
 .footer {
     color: #777;
     padding: 10px 15px;
-    height: 20px;
+    
     text-align: center;
     border-top: 1px solid #e6e6e6;
 }
@@ -275,12 +275,12 @@ body {
     0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
-.todo-count {
+.roll365-count {
     float: left;
     text-align: left;
 }
 
-.todo-count strong {
+.roll365-count strong {
     font-weight: 300;
 }
 
@@ -355,11 +355,11 @@ html .clear-completed:active {
 */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     .toggle-all,
-    .todo-list li .toggle {
+    .roll365-list li .toggle {
         background: none;
     }
 
-    .todo-list li .toggle {
+    .roll365-list li .toggle {
         height: 40px;
     }
 }
