Footer crash, otherwise Shipment works fine.  onclick.handler is fine.  Yarn and Webpacker installed locally.  Need to reset somehow on host? Heroku run bundle install does not complete.

--- a/app/views/shipments/show.html.haml
+++ b/app/views/shipments/show.html.haml
@@ -28,9 +28,9 @@
   
   .row.data
     .col-sm-2
-      Status
+      Pending
     .col-sm-10
-      =  @shipment.status
+      =  @shipment.pending
          
   .row.data
     .col-sm-2
