--- a/app/views/shipments/_form.html.haml
+++ b/app/views/shipments/_form.html.haml
@@ -11,9 +11,10 @@
     .col-md-8
       = form.text_field :tracking_id, class: "form_control"
 
-    = form.label :status, "Status", class: "col-md-4 control-label"
+  .form-group
+    = form.label :pending, "Pending", class: "col-md-4 control-label"
     .col-md-8
-      = form.select(:status, [['Open', 0], ['Closed',1], ['Suspended', 2]])
+      = form.text_area :pending, class "form-control"
 
   .form-group
     = form.label :ship_from, class: "col-md-4 control-label" 
