--- a/app/views/shipments/_form.html.haml
+++ b/app/views/shipments/_form.html.haml
@@ -11,11 +11,7 @@
     .col-md-8
       = form.text_field :tracking_id, class: "form_control"
 
-  .form-group
-    = form.label :pending, "Pending", class: "col-md-4 control-label"
-    .col-md-8
-      = form.text_area :pending, class "form-control"
-
+  
   .form-group
     = form.label :ship_from, class: "col-md-4 control-label" 
     .col-md-8
@@ -64,14 +60,13 @@
   .form-group
     = form.label :quote_basis, "Basis for Quote (Costs)", class: "col-md-4 control-label" 
     .col-md-8
-      = form.text_field :deadline, class: "form-control"
+      = form.text_field :quote_basis, class: "form-control"
 
   .form-group
     = form.label :quote_complete, "Quote ($)", class: "col-md-4 control-label" 
     .col-md-8
-      = form.text_field :deadline, class: "form-control"      
+      = form.text_field :quote_complete, class: "form-control"      
   
   %p
-    .actions
+  .actions
     = form.submit
-  
