Footer.rb.  NavLink works with the hyperstack router, it is independent ofe rails routing.  Not implemented in this version.

--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -19,7 +19,7 @@
 
   = link_to dashboard_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
-      Dashboard
+      Dispatch Dashboard
 
 %br
 
