Shipment, Dispatch Broker improvements.  Beginning to see how this needs to be redesigned so categories like :ontime etc. are consistent. For example it is currently possible for :ontime AND :delayed can be true... but maybe that's all in what they actually mean.  Using random value generators in shipments.rb seed routine.  Looks much better.

--- a/app/views/addresses/_search_panel.html.haml
+++ b/app/views/addresses/_search_panel.html.haml
@@ -1,19 +1,22 @@
 %h3 Search
 = search_form_for @q do |f|
   
-  .field
-    = f.label :street_address
-    = f.text_field :street_address_cont, class: 'form-control'
-    = f.label :city
-    = f.text_field :city_cont, class: 'form-control'
-    = f.label :state
-    = f.text_field :state_cont, class: 'form-control'
-    = f.label :post_code
-    = f.text_field :post_code_cont, class: 'form-control'
-    = f.submit class: 'btn btn-primary'
-    .btn
-      = link_to "Clear", request_path, class: "btn btn-secondary"      
-    %hr
+  
+  = f.label :street_address
+  = f.text_field :street_address_cont
+
+  = f.label :city
+  = f.text_field :city_cont
+
+  = f.label :state
+  = f.text_field :state_cont
+  
+  = f.label :post_code
+  = f.text_field :post_code_cont
+  
+  = f.submit
+
+  = link_to 'Back', addresses_path
 
 
 
