--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -303,6 +303,7 @@ body {
     padding: 3px 7px;
     text-decoration: none;
     border: 1px solid transparent;
+    border: 1px solid;
     border-radius: 3px;
 }
 
@@ -312,6 +313,7 @@ body {
 
 .filters li a.selected {
     border-color: rgba(175, 47, 47, 0.2);
+    border-color: red;
 }
 
 .clear-completed,
