--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -254,11 +254,8 @@ button {
 
 .footer {
     color: #777;
-    padding: 10px 15px;
-    
-    text-align: center;
-    border-top: 1px solid #e6e6e6;
-    border-top: 2px solid #ff0000;
+    border-top: 2px solid #0000ff;
+    display: block;
 }
 
 .footer:before {
