--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     padding: 0;
@@ -5,7 +6,6 @@ body {
 
 body {
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    line-height: 1.4em;
     background: #f5f5f5;
     color: #4d4d4d;
     min-width: 230px;
@@ -252,27 +252,6 @@ button {
     margin-bottom: -1px;
 }
 
-.footer {
-    color: #777;
-    border-top: 2px solid #0000ff;
-    display: block;
-}
-
-.footer:before {
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    height: 50px;
-    overflow: hidden;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-    0 8px 0 -3px #f6f6f6,
-    0 9px 1px -3px rgba(0, 0, 0, 0.2),
-    0 16px 0 -6px #f6f6f6,
-    0 17px 2px -6px rgba(0, 0, 0, 0.2);
-}
-
 .roll365-count {
     float: left;
     text-align: left;
@@ -280,6 +259,10 @@ button {
 
 .roll365-count strong {
     font-weight: 300;
+}
+
+.footer {
+    color: lite-grey;
 }
 
 .filters {
