--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
   = yield
   
 
-  - if controller_name == 'hyperstack'
+  - if controller_name == 'Hyperstack'
   
     = mount_component 'Footer'
 
