Go back to baseline version of application.html.haml where we use controller_name == 'hyperstack'

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
 .container-fluid
   
 
-  - if controller_name == 'Hyperstack'
+  - if controller_name == 'hyperstack'
     
     = mount_component 'Header'
 
@@ -28,7 +28,7 @@
   = yield
   
 
-  - if controller_name == 'Hyperstack'
+  - if controller_name == 'hyperstack'
   
     = mount_component 'Footer'
 
