Returned to Heroku replacing 'heroku' in app views layouts application.rb

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
 .container-fluid
   
 
-  - if controller_name == 'hyperstack'
+  - if controller_name == 'Hyperstack'
     
     = mount_component 'Header'
 
@@ -28,7 +28,7 @@
   = yield
   
 
-  - if controller_name == 'hyperstack'
+  - if controller_name == 'Hyperstack'
   
     = mount_component 'Footer'
 
