Expected color but found ‘#6c757d’.  Error in parsing value for ‘color’.  Declaration dropped. w3_panel dropped. application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -356,16 +356,13 @@ h3{ font-size: 24px
   }
 
 .data,p {
-    color: "#6c757d";
+    color: blue;
     font-size: 14px;
   }
-.footer{
-  font-size: 12px;
-  }
+
+
 .tbg {
   background-color: lightblue
   }
-.tbr {
-  w3_panel: w3-border
-  }
+
 
