--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -22,7 +22,7 @@
 .row-align-items-end
       
       
-  %p
+  %p(tiny)
     Roll365.com does not employ, recommend or endorse any agent, broker, carrier or shipper nor are we responsible for the conduct of any agent, broker, carrier or shipper. Roll365.com provides information and tools to help agents, brokers, carriers and shippers make informed decisions.   Where appropriate such services may be built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.  As of now no smart contact services are implemented.
 
       
