heroku not Heroku -- again

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,8 +63,20 @@ body {
 
 .roll365-app {
     background: #fff;
+    border-radius: 30px;
     margin: 130px 0 40px 0;
     position: relative;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
     0 25px 50px 0 rgba(0, 0, 0, 0.1);
+}
+/******************************************************/
+/* missing errors, made these up           */
+/******************************************************/
+
+.header {
+    font-size: 24px;
+}
+
+.scope {
+    background: yellow;
 }
