--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,7 @@
 .container-fluid
   
 
-  - if controller_name == 'Hyperstack'
+  - if controller_name == 'hyperstack'
     
     = mount_component 'Header'
     -#= mount_component 'Header', controller_name: 'controller_name', action_name: 'action_name', flash: 'flash.as_json'
