--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,14 +14,14 @@
 -#  
 
 .container-fluid
+ 
+
   
 
-  - if controller_name == 'hyperstack'
+  - if controller_name == 'Hyperstack'
     
     = mount_component 'Header'
-    -#= mount_component 'Header', controller_name: 'controller_name', action_name: 'action_name', flash: 'flash.as_json'
-    -#= mount_component 'Header', controller_name: 'Hyperstasck', action_name: 'app', flash: 'flash.as_json'
-
+    
   - else
 
     = render '/shared/header'
