It's the routes, stupid!  Can make the same fails happen on client by chaning them.  Working now, so worth a try on Heroku.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,8 +73,8 @@ body {
 /* missing errors, made these up           */
 /******************************************************/
 
-.header {
-    font-size: 24px;
+header {
+    font-size: 10px;
 }
 
 .scope {
