--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -6,23 +6,24 @@
   %p
 
 .row-align-items-center
-    
+
   %p
     = link_to_unless_current 'Home', root_path
     = link_to_unless_current 'About Us', about_path
     = link_to_unless_current 'Advertise', advertise_path
-    = link_to_unless_current 'FAQ', faq_path   
+    = link_to_unless_current 'FAQ', faq_path
     = link_to_unless_current 'Contact Us', contact_path
     = link_to_unless_current 'Privacy Policy', privacy_path
     = link_to_unless_current 'Terms and Conditions', tsandcs_path
     = link_to_unless_current 'License', license_path
-  
+
   %p
 
 .row-align-items-end
-      
-      
-  %p(tiny)
-    Roll365.com does not employ, recommend or endorse any agent, broker, carrier or shipper nor are we responsible for the conduct of any agent, broker, carrier or shipper. Roll365.com provides information and tools to help agents, brokers, carriers and shippers make informed decisions.   Where appropriate such services may be built upon the Fr8.Network protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.  As of now no smart contact services are implemented.
 
-      
+  %footer
+    Roll365.com does not employ, recommend or endorse any agent, broker, carrier or shipper nor are we responsible for the
+    conduct of any agent, broker, carrier or shipper. Roll365.com provides information and tools to help agents, brokers,
+    carriers and shippers make informed decisions.   Where appropriate such services may be built upon the Fr8.Network
+    protocol including smart contracts and transactions, if any, rely on the Ethereum blockchain.  As of now no smart contact
+    services are implemented.
