--- a/app/views/welcome/landing.html.haml
+++ b/app/views/welcome/landing.html.haml
@@ -19,6 +19,8 @@
 
   = link_to dashboard_path, class: 'btn btn-secondary' do
     %i.glyphicon.glyphicon-plus
-      Dispatch Dashboard
+      Dashboards
+  &nbsp;
+
 
 %br
